--- a/5_galeria_viñetass/style.css
+++ b/5_galeria_viñetass/style.css
@@ -97,7 +97,7 @@
 
     .hud {
       position: absolute;
-      top: 10px;
+      top: 60px;
       right: 10px;
       display: flex;
       flex-direction: column;
@@ -190,3 +190,19 @@
   border: 3px solid #FFD700;
 }
 
+button {
+    background-color: rgba(26, 25, 25, 0.438);;
+    color: rgb(255, 255, 255);
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 120px;
+    margin: 5px;
+
+}
+
+button:hover {
+    background-color: rgba(61, 109, 73, 0.308);;
+}
