--- a/6_base_datos_cómic/styless.css
+++ b/6_base_datos_cómic/styless.css
@@ -1,10 +1,13 @@
 body{
     background-color: black;
     margin: 0;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .contenedorCaps{
-    width: 100%;
+    width: 95%;
     height: 100vh;
     display: flex;
     justify-content: space-evenly;
@@ -30,6 +33,22 @@ body{
     box-shadow: 0 0 7vh  rgb(104, 14, 14),
     0 0 1.5vh  rgb(133, 133, 133),
     inset 0 0 1.5vh  rgb(255, 254, 254);
+}
+.opHcaps{
+    opacity: .7;
+    transition: ease .5s;
+}
+.opHcaps:hover{
+    transition: ease .5s;
+  opacity: 1;
+}
+.capsH{
+    transition: ease .5s;
+    background-position-x: left;
+}
+.capsH:hover {
+  transform: scale(1.03) rotate(2deg);
+   background-position-x: right;
 }
 .cap-1::before{
     content: "";
@@ -75,9 +94,22 @@ button{
 
 
 
+.barra{
+    width: 60%;
+    height: .65vh;
+    background-color: rgb(0, 0, 0);
+    margin-top: 3vh;
+}
+.barra div{
+    width: 30%;
+    height: .65vh;
+    background-color: white;
+}
+
+
+
 .cap-2{
     background-image: url(./assets/cap2.png);
-    background-position: center;
     background-size: cover;
     height: 60vh;
     width: 8%;
@@ -85,4 +117,89 @@ button{
     color: white;
     text-align: center;
     font-family: sans-serif;
+    box-shadow: -.5vh -.5vh 1vh rgb(100, 100, 100);
+    position: relative;
+    top: -2vh;
+    right: -12vh;
+
+}
+.cap-3{
+    background-image: url(./assets/capitulo-3.png);
+    background-size: cover;
+    height: 60vh;
+    width: 8%;
+    border-radius: 1vh;
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    box-shadow: -.5vh -.5vh 1vh rgb(194, 194, 194);
+    position: relative;
+    top: 2vh;
+    right: -9vh;
+}
+.cap-4{
+    background-image: url(./assets/capitulo-4.png);
+    background-size: cover;
+    height: 60vh;
+    width: 8%;
+    border-radius: 1vh;
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    box-shadow: -.5vh -.5vh 1vh rgb(100, 100, 100);
+    position: relative;
+    top: -2vh;
+    right: -6vh;
+
+}
+.cap-5{
+    background-image: url(./assets/capitulo-5.png);
+    background-size: cover;
+    height: 60vh;
+    width: 8%;
+    border-radius: 1vh;
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    box-shadow: -.5vh -.5vh 1vh rgb(194, 194, 194);
+    position: relative;
+    top: 2vh;
+    right: -3vh;
+
+}
+.cap-6{
+    background-image: url(./assets/capitulo-6.png);
+    background-size: cover;
+    height: 60vh;
+    width: 8%;
+    border-radius: 1vh;
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    box-shadow: -.5vh -.5vh 1vh rgb(100, 100, 100);
+    position: relative;
+    top: -2vh;
+}
+@media (max-width:600px) {
+    .contenedorCaps{
+        display: flex;
+        flex-direction: column;
+    }
+    .cap-1{
+        width: 70%;
+        height: 270vh;
+        top: 10vh;
+        left: -2vh;
+    }
+    .BTN{
+        transform: translateY(-5vh);
+    }
+    .barra{
+         transform: translateY(-3vh);
+    }
+    .barra div{
+         transform: translateY(-3vh);
+    }
+
+
 }
