--- a/6_base_datos_cómic/styless.css
+++ b/6_base_datos_cómic/styless.css
@@ -12,6 +12,8 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    gap: 10px;
+    overflow: hidden;
 }
 .flecha{
     width: 4vh;
